# customer-support-env

./: .dockerignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  replace.py  test_score_validation.py
customer_support_env/: .dockerignore  Dockerfile  README.md  __init__.py  baseline.py  environment.py  models.py  openenv.yaml  requirements.txt  server.py
customer_support_env/data/: tickets.json
customer_support_env/graders/: __init__.py  easy_grader.py  hard_grader.py  medium_grader.py
customer_support_env/tasks/: __init__.py  easy.py  hard.py  medium.py
outputs/: baseline_results.json
server/: app.py
