[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customer_support_env"
version = "1.0.0"
description = "Customer Support Resolution OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "customer_support_env.server:main"
